--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,26 @@
             <version>${jackson.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+
+        <dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.8</version>
+		</dependency>
+
     </dependencies>
+
+ <build>
+   <resources>
+     <resource>
+       <directory>src/main/resources</directory>
+     </resource>
+   </resources>
+ </build>
 
 </project>
